create hotspot componant

--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@next/font": "13.1.6",
+    "@popperjs/core": "^2.11.6",
     "@types/node": "18.11.18",
     "@types/react": "18.0.27",
     "@types/react-dom": "18.0.10",
@@ -17,7 +18,9 @@
     "bootstrap-icons": "^1.10.3",
     "eslint": "8.33.0",
     "eslint-config-next": "13.1.6",
+    "jquery": "^3.6.3",
     "next": "13.1.6",
+    "popper.js": "^1.16.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "typescript": "4.9.5"
