--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/node": "18.11.18",
     "@types/react": "18.0.27",
     "@types/react-dom": "18.0.10",
+    "@types/styled-components": "^5.1.26",
     "bootstrap": "^5.2.3",
     "bootstrap-icons": "^1.10.3",
     "eslint": "8.33.0",
@@ -23,6 +24,12 @@
     "popper.js": "^1.16.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "typescript": "4.9.5"
+    "react-grid-gallery": "^1.0.0",
+    "react-image-lightbox": "^5.1.4",
+    "react-images": "^1.2.0-beta.7",
+    "react-spring-lightbox": "^1.7.1",
+    "styled-components": "^5.3.6",
+    "typescript": "4.9.5",
+    "yet-another-react-lightbox": "2.1.1"
   }
 }
