--- a/package.json
+++ b/package.json
@@ -19,10 +19,10 @@
     "bootstrap-icons": "^1.10.3",
     "eslint": "8.33.0",
     "eslint-config-next": "13.1.6",
-    "jquery": "^3.6.3",
     "next": "13.1.6",
     "popper.js": "^1.16.1",
     "react": "18.2.0",
+    "react-bootstrap": "^2.7.0",
     "react-dom": "18.2.0",
     "react-grid-gallery": "^1.0.0",
     "react-image-lightbox": "^5.1.4",
