--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@next/font": "13.1.6",
     "@popperjs/core": "^2.11.6",
+    "@rematch/core": "^2.2.0",
     "@types/node": "18.11.18",
     "@types/react": "18.0.27",
     "@types/react-dom": "18.0.10",
@@ -22,13 +23,17 @@
     "eslint-config-next": "13.1.6",
     "next": "13.1.6",
     "popper.js": "^1.16.1",
-    "react": "18.2.0",
+    "react": "^18.2.0",
     "react-bootstrap": "^2.7.0",
-    "react-dom": "18.2.0",
+    "react-dom": "^18.2.0",
     "react-grid-gallery": "^1.0.0",
     "react-image-lightbox": "^5.1.4",
     "react-images": "^1.2.0-beta.7",
+    "react-redux": "^8.0.5",
     "react-spring-lightbox": "^1.7.1",
+    "reactstrap": "^9.1.6",
+    "redux": "^4.2.1",
+    "sass": "^1.58.3",
     "styled-components": "^5.3.6",
     "typescript": "4.9.5",
     "yet-another-react-lightbox": "2.1.1"
