--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react-images": "^1.2.0-beta.7",
     "react-redux": "^8.0.5",
     "react-spring-lightbox": "^1.7.1",
+    "react-uuid": "^2.0.0",
     "reactstrap": "^9.1.6",
     "redux": "^4.2.1",
     "sass": "^1.58.3",
