--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "bootstrap-icons": "^1.10.3",
     "eslint": "8.33.0",
     "eslint-config-next": "13.1.6",
+    "formik": "^2.2.9",
     "json-server": "^0.17.2",
     "next": "13.1.6",
     "popper.js": "^1.16.1",
